test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specification_overflow_value.sol
contract A layout at 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF + 1 {}
contract B layout at 2**256 {}
// ----
// UnimplementedFeatureError 1834: (0-94): Code generation is not supported for contracts with specified storage layout base.
